# colortail

./: .gitignore  .gitmodules  CfgFileParser.cc  CfgFileParser.h  ColorTail.cc  ColorTail.h  ColorTailTypes.h  Colorizer.cc  Colorizer.h  Makefile.am  TailFile.cc  TailFile.h  config.ebnf  configure.in
src/parser/: expression.cpp  expression.hpp  expression_stack.hpp  expression_types.hpp
tests/: Colorizer_tests.cpp  Colorizer_tests.hpp  Makefile.am  Parser_tests.cpp  Parser_tests.hpp  TailFile_tests.cpp  TailFile_tests.hpp  main.cpp  simple.hpp
